dashboard/static/dashboard/css/dashboard.css
/*
Collapsing sidebar
*/

.nav-icon{
    color: inherit;
    font-size: 1.8em;
}

.nav-row {
    display: inline-flex;
    align-items: center;
}

.nav-item{
    margin-top: 0.5em;
    overflow: hidden;
    width: auto;
    
}

.nav-pills .nav-link{
    height: 2.5em;
    width: auto;
    overflow: hidden;
    display: flex;
    justify-content: center;
    padding: 0em;
}

.nav-pills .nav-link:hover{
    background-color: var(--mobi-blue);
    opacity: 0.6;
    font-weight: bolder;
}

.nav-pills .nav-link.active{
    background-color: var(--mobi-blue);
    opacity: 0.9;
}

.sidebar{
    padding-left: 0px; /*Remove default padding from column*/
    padding-right: 10px;
}

#dashboard-sidebar{
    overflow: hidden;
    background-color: #d0dde1;  
    min-width: 50%;
    max-width: 50%;
    transition: min-width 0.5s ease-in, max-width 0.5s ease-in;
    color: #1f2d41 !important;
}

#dashboard-sidebar:hover{
   min-width: 100%;
   max-width: 100%;
}

#dashboard-sidebar .sidebar-text{
    /* color: black; */
    font-size: inherit;
    visibility: hidden;
    display: flex;
    width: 0;
    opacity: 0;
    white-space: nowrap;
    overflow: hidden;
    padding-top: 0.2em;
    transition: visibility 0.5s ease-in-out 0.5s, opacity 0.5s ease-in-out, width 0.4s ease-in 0.5s, width ease-out 0.6s;
    /* transition: all 0.5s ease-in-out; */
}

#dashboard-sidebar:hover .sidebar-text{
    visibility: visible;
    opacity: 1;
    width: auto;
}

#dashboard-sidebar:hover .nav-link{
    justify-content: left;
    padding-left: 0.5em;
}

#dashboard-sidebar:hover .nav-link:hover .sidebar-text {
    /* padding-top: 0.5em; */
}

/*
Chart related styling
*/
.chart-row > div{
    width: 80%;
    height: 1000px;
}

#rt-map { height: 80em; }

#hist-map { height: 100em; }

.leaflet-panel-layers-icon {
    width: auto;
    justify-content: bottom;
}

.leaflet-panel-layers-icon i{
    font-size: 1.5em;
    align-items: center;
    padding-right: 0.5em;
}

.leaflet-panel-layers-title span {
    padding-right: 1em;
}

label.leaflet-panel-layers-title {
    line-height: inherit;
    font-size: .8rem;
}

.rt-chart{
    height: 30em;
}

